<resources>
    <string name="app_name">CaloriesCalculator</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="skip">skip</string>
    <string name="register_form">Register Form</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="note_skip_if_you_already_registered">Note : skip if you already registered</string>
</resources>
