<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#Efeeee"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="231dp"
        android:layout_height="206dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoprofile" />

    <EditText
        android:id="@+id/Age_editText"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textColorHighlight="#23215F"
        android:textColorLink="#23215F"
        app:layout_constraintBottom_toTopOf="@+id/weight_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fullname_editText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/height_editText"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/height_cm"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/weight_editText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/weight_editText"
        app:layout_constraintTop_toBottomOf="@+id/weight_editText" />

    <EditText
        android:id="@+id/weight_editText"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/weight_kg"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/height_editText"
        app:layout_constraintEnd_toEndOf="@+id/Age_editText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/Age_editText"
        app:layout_constraintTop_toBottomOf="@+id/Age_editText" />

    <CheckBox
        android:id="@+id/Female_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Male_checkBox"
        app:layout_constraintTop_toTopOf="@+id/Male_checkBox" />

    <CheckBox
        android:id="@+id/Male_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/male"
        android:textColorLink="#23215F"
        app:layout_constraintEnd_toStartOf="@+id/Female_checkBox"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_editText" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="100dp"
        android:background="#4AB19D"
        android:text="@string/register"
        android:textColor="#FFFFFFFF"
        android:textColorHint="#23215F"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Female_checkBox"
        app:layout_constraintStart_toStartOf="@+id/Male_checkBox"
        app:layout_constraintTop_toBottomOf="@+id/Male_checkBox" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_form"
        android:textColor="#23215F"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toTopOf="@+id/Age_editText"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/username_editText"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password_editText"
        app:layout_constraintEnd_toEndOf="@+id/fullname_editText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/fullname_editText"
        app:layout_constraintTop_toBottomOf="@+id/fullname_editText" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/username_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_editText"
        app:layout_constraintTop_toBottomOf="@+id/username_editText" />

    <EditText
        android:id="@+id/fullname_editText"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/username_editText"
        app:layout_constraintEnd_toStartOf="@+id/Age_editText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>